<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/robotocondensed"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#000000">


    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="364dp"
        android:layout_height="322dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="fitXY"
        android:src="@drawable/videoicon"
        app:srcCompat="@drawable/videoicon" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry"
        android:background="#000000">

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensed"
            android:text="@string/movieTitle"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/certification"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensed"
            android:text="@string/certification"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensed"
            android:text="@string/description"
            android:textColor="#FFFF"
            android:layout_marginBottom="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_starring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensed"
            android:text="@string/starring"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="#FFFF"/>

        <TextView
            android:id="@+id/running_time_mins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensed"
            android:text="@string/running_time_mins"
            android:textColor="#FFFF"
            android:layout_marginBottom="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_seats_remaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensed"
            android:text="@string/movie_seats"
            android:textColor="#FFFF"
            android:layout_marginBottom="5dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/movie_filling_fast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filling Fast"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>




