<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#000000">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="fitXY"
        android:src="@drawable/videoicon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:background="#000000">

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensed"
            android:padding="0dp"
            android:text="@string/movieTitle"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/certification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensed"
            android:padding="0dp"
            android:text="@string/certification"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_starring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensed"
            android:text="@string/movie_starring"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/running_time_mins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running_time_mins"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#000000"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/movie_seats_remaining"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/movie_seats_remaining"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingHorizontal="0dp"
            android:background="#000000">

            <TextView
                android:id="@+id/SelectSeats"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:text="Select Seats"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="0dp"
                android:textSize="14sp" />


            <ImageButton
                android:id="@+id/minus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="#003C3F41"
                android:contentDescription="@string/minus_button"
                android:src="@drawable/minusicon"
                tools:ignore="RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/seats_selected_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/SelectedSIts"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/plus_button"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/plus_button"
                android:src="@drawable/plusicon"
                tools:ignore="RedundantDescriptionCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables,VisualLintBounds"
                android:background="#000000">

                <ImageView
                    android:layout_marginTop="5dp"
                    android:id="@+id/imageView"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:baselineAligned="false"
                    android:contentDescription="@string/chair"
                    app:srcCompat="@drawable/seaticon" />

                <TextView
                    android:id="@+id/seats_remaining_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="10dp"
                    android:text="@string/RemainingSeats"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="90dp"
                    android:layout_height="31dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Seats Remaining"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>